--- a/photography/west-coast-trail/index.html
+++ b/photography/west-coast-trail/index.html
@@ -12,13 +12,13 @@
     <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../css/modern-business.css" rel="stylesheet">
+    <link href="../../css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -89,51 +89,83 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Photography
+                <h1 class="page-header">West Coast Trail
+                    <small>Vancouver Island, BC, Canada 2013</small>
                 </h1>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li class="active">Photography</li>
+					<li class="active">West Coast Trail</li>
+                </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-4 img-portfolio">
-                <a href="west-coast-trail/index.html">
-                    <img class="img-responsive img-hover" src="images/covers/20120811-IMG_4020.jpg" alt="">
-                </a>
-				<div class="text-center small-gray">West Coast Trail</div>
-            </div>
-            <div class="col-md-4 img-portfolio">
+            <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_8467.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/20120811-IMG_4020.jpg" alt="">
                 </a>
-				<div class="text-center small-gray">Yosemite</div>
             </div>
-            <div class="col-md-4 img-portfolio">
+        </div>
+        <!-- /.row -->
+        <hr>
+		
+        <div class="row">
+            <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_5907.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/IMG_3433.jpg" alt="">
                 </a>
-				<div class="text-center small-gray">Grand Canyon</div>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Projects Row -->
+        <hr>
+
         <div class="row">
-            <div class="col-md-4 img-portfolio">
+            <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_0810.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/IMG_3509.jpg" alt="">
                 </a>
-				<div class="text-center small-gray">Wind Rivers</div>
-            </div>
-            <div class="col-md-4 img-portfolio">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_9048.jpg" alt="">
-                </a>
-				<div class="text-center small-gray">Ancient Bristlecone Pine Forest</div>
             </div>
         </div>
+        <!-- /.row -->
 
+        <hr>
+
+
+        <!-- Pagination -->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
 
         <!-- Footer -->
         <footer>
@@ -148,10 +180,10 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
+    <script src="../../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
 
 </body>
 
