updated paths in header

--- a/photography/index.html
+++ b/photography/index.html
@@ -42,39 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="../index.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="photography.html">Photography</a>
+                        <a href="index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="photography.html">Projects</a>
+                        <a href="../projects/index.html">Projects</a>
                     </li>
 					<li>
-                        <a href="about.html">About Me</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
+                        <a href="../about.html">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -104,13 +84,13 @@
 				<div class="text-center small-gray">West Coast Trail</div>
             </div>
             <div class="col-md-4 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="yosemite/index.html">
                     <img class="img-responsive img-hover" src="images/covers/IMG_8467.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Yosemite</div>
             </div>
             <div class="col-md-4 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="grand-canyon/index.html">
                     <img class="img-responsive img-hover" src="images/covers/IMG_5907.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Grand Canyon</div>
