--- a/photography/west-coast-trail/index.html
+++ b/photography/west-coast-trail/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>West Coast Trail</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -42,39 +42,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="../../index.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="photography.html">Photography</a>
+                        <a href="../index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="photography.html">Projects</a>
+                        <a href="../../projects/index.html">Projects</a>
                     </li>
 					<li>
-                        <a href="about.html">About Me</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
+                        <a href="../../about.html">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -93,9 +73,9 @@
                     <small>Vancouver Island, BC, Canada 2013</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="../../index.html">Home</a>
                     </li>
-                    <li class="active">Photography</li>
+                    <li><a href="../index.html">Photography</a></li>
 					<li class="active">West Coast Trail</li>
                 </ol>
             </div>
@@ -105,7 +85,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/20120811-IMG_4020.jpg" alt="">
+                    <img class="img-responsive" src="images/20120811-IMG_4020.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -115,7 +95,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/IMG_3433.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_3433.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -126,41 +106,8 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="images/IMG_3509.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_3509.jpg" alt="">
                 </a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-
-        <!-- Pagination -->
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="pagination">
-                    <li>
-                        <a href="#">&laquo;</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
-                    </li>
-                    <li>
-                        <a href="#">&raquo;</a>
-                    </li>
-                </ul>
             </div>
         </div>
         <!-- /.row -->
