did script and added all photography index pages

--- a/photography/grand-canyon/index.html
+++ b/photography/grand-canyon/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>West Coast Trail</title>
+    <title>Grand Canyon</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,14 +69,14 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">West Coast Trail
-                    <small>BC, CA</small>
+                <h1 class="page-header">Grand Canyon
+                    <small>AZ, USA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">West Coast Trail</li>
+					<li class="active">Grand Canyon</li>
                 </ol>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/20120811-IMG_4020.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_0578.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3433.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_0591.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3509.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_0633.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -116,7 +116,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3569.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_0635.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3608.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_0672.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -136,7 +136,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3748.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_5861.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3792.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_5907.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -156,7 +156,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3799.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_5929.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -166,7 +166,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3867.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_5955.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -176,7 +176,97 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive" src="images/IMG_3917.jpg" alt="">
+                    <img class="img-responsive" src="images/IMG_6033.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6062.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6076.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6089.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6297.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6321.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6332.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6354.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6468.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_6864.jpg" alt="">
                 </a>
             </div>
         </div>
