--- a/photography/index.html
+++ b/photography/index.html
@@ -101,13 +101,13 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="wind-rivers/index.html">
                     <img class="img-responsive img-hover" src="images/covers/IMG_0810.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Wind Rivers</div>
             </div>
             <div class="col-md-4 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="ancient-bristlecone-pine/index.html">
                     <img class="img-responsive img-hover" src="images/covers/IMG_9048.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Ancient Bristlecone Pine Forest</div>
