--- a/photography/ancient-bristlecone-pine/index.html
+++ b/photography/ancient-bristlecone-pine/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>#TITLE#</title>
+    <title>Ancient Bristlecone Pine</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,20 +69,110 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">#TITLE#
-                    <small>#LOCATION#</small>
+                <h1 class="page-header">Ancient Bristlecone Pine
+                    <small>CA, USA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">#TITLE#</li>
+					<li class="active">Ancient Bristlecone Pine</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        #IMAGES#
+        
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8894.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8941.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8990.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9003.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9041.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9048.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9055.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9061.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_9077.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
 
         <!-- Footer -->
         <footer>
