--- a/photography/west-coast-trail/index_old.html
+++ b/photography/west-coast-trail/index_old.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>#TITLE#</title>
+    <title>West Coast Trail</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,20 +69,50 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">#TITLE#
-                    <small>#LOCATION#</small>
+                <h1 class="page-header">West Coast Trail
+                    <small>Vancouver Island, BC, Canada 2013</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">#TITLE#</li>
+					<li class="active">West Coast Trail</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        #IMAGES#
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/20120811-IMG_4020.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+		
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3433.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3509.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
 
         <!-- Footer -->
         <footer>
