--- a/photography/yosemite/index.html
+++ b/photography/yosemite/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>#TITLE#</title>
+    <title>Yosemite</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,20 +69,90 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">#TITLE#
-                    <small>#LOCATION#</small>
+                <h1 class="page-header">Yosemite
+                    <small>CA, USA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">#TITLE#</li>
+					<li class="active">Yosemite</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
 
-        #IMAGES#
+        
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_0346.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_0616.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_0622.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_0657.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8467.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8511.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_8551.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
 
         <!-- Footer -->
         <footer>
