updated links in albums and created about page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kevin mMcKenzie</title>
+    <title>Kevin McKenzie</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
                         <a href="projects/index.html">Projects</a>
                     </li>
 					<li>
-                        <a href="about.html">About Me</a>
+                        <a href="about/index.html">About Me</a>
                     </li>
                 </ul>
             </div>
