--- a/photography/west-coast-trail/index.html
+++ b/photography/west-coast-trail/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">West Coast Trail
-                    <small>BC, CA</small>
+                    <small>Vancouver Island, BC</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
@@ -85,7 +85,7 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/20120811-IMG_4020.jpg">
                     <img class="img-responsive" src="images/20120811-IMG_4020.jpg" alt="">
                 </a>
             </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3433.jpg">
                     <img class="img-responsive" src="images/IMG_3433.jpg" alt="">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3509.jpg">
                     <img class="img-responsive" src="images/IMG_3509.jpg" alt="">
                 </a>
             </div>
@@ -115,7 +115,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3569.jpg">
                     <img class="img-responsive" src="images/IMG_3569.jpg" alt="">
                 </a>
             </div>
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3608.jpg">
                     <img class="img-responsive" src="images/IMG_3608.jpg" alt="">
                 </a>
             </div>
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3748.jpg">
                     <img class="img-responsive" src="images/IMG_3748.jpg" alt="">
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3792.jpg">
                     <img class="img-responsive" src="images/IMG_3792.jpg" alt="">
                 </a>
             </div>
@@ -155,7 +155,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3799.jpg">
                     <img class="img-responsive" src="images/IMG_3799.jpg" alt="">
                 </a>
             </div>
@@ -165,7 +165,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3867.jpg">
                     <img class="img-responsive" src="images/IMG_3867.jpg" alt="">
                 </a>
             </div>
@@ -175,7 +175,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_3917.jpg">
                     <img class="img-responsive" src="images/IMG_3917.jpg" alt="">
                 </a>
             </div>
