--- a/photography/west-coast-trail/index_old2.html
+++ b/photography/west-coast-trail/index_old2.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Wind River Range</title>
+    <title>West Coast Trail</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,14 +69,14 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Wind River Range
-                    <small>Rocky Mountains, WY</small>
+                <h1 class="page-header">West Coast Trail
+                    <small>BC, CA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">Wind River Range</li>
+					<li class="active">West Coast Trail</li>
                 </ol>
             </div>
         </div>
@@ -85,8 +85,8 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0810.jpg">
-                    <img class="img-responsive" src="images/IMG_0810.jpg" alt="">
+                <a href="images/20120811-IMG_4020.jpg">
+                    <img class="img-responsive" src="images/20120811-IMG_4020.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -95,8 +95,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0813.jpg">
-                    <img class="img-responsive" src="images/IMG_0813.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3433.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -105,8 +105,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0823.jpg">
-                    <img class="img-responsive" src="images/IMG_0823.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3509.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -115,8 +115,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0834.jpg">
-                    <img class="img-responsive" src="images/IMG_0834.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3569.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -125,8 +125,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0861.jpg">
-                    <img class="img-responsive" src="images/IMG_0861.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3608.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -135,8 +135,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0867.jpg">
-                    <img class="img-responsive" src="images/IMG_0867.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3748.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -145,8 +145,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0876.jpg">
-                    <img class="img-responsive" src="images/IMG_0876.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3792.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -155,8 +155,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0899.jpg">
-                    <img class="img-responsive" src="images/IMG_0899.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3799.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -165,8 +165,18 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0915.jpg">
-                    <img class="img-responsive" src="images/IMG_0915.jpg" alt="">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3867.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive" src="images/IMG_3917.jpg" alt="">
                 </a>
             </div>
         </div>
