--- a/photography/yosemite/index.html
+++ b/photography/yosemite/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Yosemite
-                    <small>CA, USA</small>
+                    <small>Yosemite National Park, CA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
@@ -85,7 +85,7 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0346.jpg">
                     <img class="img-responsive" src="images/IMG_0346.jpg" alt="">
                 </a>
             </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0616.jpg">
                     <img class="img-responsive" src="images/IMG_0616.jpg" alt="">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0622.jpg">
                     <img class="img-responsive" src="images/IMG_0622.jpg" alt="">
                 </a>
             </div>
@@ -115,7 +115,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0657.jpg">
                     <img class="img-responsive" src="images/IMG_0657.jpg" alt="">
                 </a>
             </div>
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8467.jpg">
                     <img class="img-responsive" src="images/IMG_8467.jpg" alt="">
                 </a>
             </div>
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8511.jpg">
                     <img class="img-responsive" src="images/IMG_8511.jpg" alt="">
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8551.jpg">
                     <img class="img-responsive" src="images/IMG_8551.jpg" alt="">
                 </a>
             </div>
