--- a/photography/ancient-bristlecone-pine/index.html
+++ b/photography/ancient-bristlecone-pine/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Ancient Bristlecone Pine
-                    <small>CA, USA</small>
+                    <small>White Mountains, CA</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
@@ -85,7 +85,7 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8894.jpg">
                     <img class="img-responsive" src="images/IMG_8894.jpg" alt="">
                 </a>
             </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8941.jpg">
                     <img class="img-responsive" src="images/IMG_8941.jpg" alt="">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_8990.jpg">
                     <img class="img-responsive" src="images/IMG_8990.jpg" alt="">
                 </a>
             </div>
@@ -115,7 +115,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9003.jpg">
                     <img class="img-responsive" src="images/IMG_9003.jpg" alt="">
                 </a>
             </div>
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9041.jpg">
                     <img class="img-responsive" src="images/IMG_9041.jpg" alt="">
                 </a>
             </div>
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9048.jpg">
                     <img class="img-responsive" src="images/IMG_9048.jpg" alt="">
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9055.jpg">
                     <img class="img-responsive" src="images/IMG_9055.jpg" alt="">
                 </a>
             </div>
@@ -155,7 +155,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9061.jpg">
                     <img class="img-responsive" src="images/IMG_9061.jpg" alt="">
                 </a>
             </div>
@@ -165,7 +165,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_9077.jpg">
                     <img class="img-responsive" src="images/IMG_9077.jpg" alt="">
                 </a>
             </div>
