--- a/photography/grand-canyon/index.html
+++ b/photography/grand-canyon/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Grand Canyon
-                    <small>AZ, USA</small>
+                    <small>Grand Canyon National Park, AZ</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
@@ -85,7 +85,7 @@
         
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0578.jpg">
                     <img class="img-responsive" src="images/IMG_0578.jpg" alt="">
                 </a>
             </div>
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0591.jpg">
                     <img class="img-responsive" src="images/IMG_0591.jpg" alt="">
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0633.jpg">
                     <img class="img-responsive" src="images/IMG_0633.jpg" alt="">
                 </a>
             </div>
@@ -115,7 +115,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0635.jpg">
                     <img class="img-responsive" src="images/IMG_0635.jpg" alt="">
                 </a>
             </div>
@@ -125,7 +125,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_0672.jpg">
                     <img class="img-responsive" src="images/IMG_0672.jpg" alt="">
                 </a>
             </div>
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_5861.jpg">
                     <img class="img-responsive" src="images/IMG_5861.jpg" alt="">
                 </a>
             </div>
@@ -145,7 +145,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_5907.jpg">
                     <img class="img-responsive" src="images/IMG_5907.jpg" alt="">
                 </a>
             </div>
@@ -155,7 +155,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_5929.jpg">
                     <img class="img-responsive" src="images/IMG_5929.jpg" alt="">
                 </a>
             </div>
@@ -165,7 +165,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_5955.jpg">
                     <img class="img-responsive" src="images/IMG_5955.jpg" alt="">
                 </a>
             </div>
@@ -175,7 +175,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6033.jpg">
                     <img class="img-responsive" src="images/IMG_6033.jpg" alt="">
                 </a>
             </div>
@@ -185,7 +185,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6062.jpg">
                     <img class="img-responsive" src="images/IMG_6062.jpg" alt="">
                 </a>
             </div>
@@ -195,7 +195,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6076.jpg">
                     <img class="img-responsive" src="images/IMG_6076.jpg" alt="">
                 </a>
             </div>
@@ -205,7 +205,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6089.jpg">
                     <img class="img-responsive" src="images/IMG_6089.jpg" alt="">
                 </a>
             </div>
@@ -215,7 +215,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6297.jpg">
                     <img class="img-responsive" src="images/IMG_6297.jpg" alt="">
                 </a>
             </div>
@@ -225,7 +225,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6321.jpg">
                     <img class="img-responsive" src="images/IMG_6321.jpg" alt="">
                 </a>
             </div>
@@ -235,7 +235,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6332.jpg">
                     <img class="img-responsive" src="images/IMG_6332.jpg" alt="">
                 </a>
             </div>
@@ -245,7 +245,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6354.jpg">
                     <img class="img-responsive" src="images/IMG_6354.jpg" alt="">
                 </a>
             </div>
@@ -255,7 +255,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6468.jpg">
                     <img class="img-responsive" src="images/IMG_6468.jpg" alt="">
                 </a>
             </div>
@@ -265,7 +265,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="portfolio-item.html">
+                <a href="images/IMG_6864.jpg">
                     <img class="img-responsive" src="images/IMG_6864.jpg" alt="">
                 </a>
             </div>
