--- a/photography/index.html
+++ b/photography/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Photography</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
                         <a href="../projects/index.html">Projects</a>
                     </li>
 					<li>
-                        <a href="../about.html">About Me</a>
+                        <a href="../about/index.html">About Me</a>
                     </li>
                 </ul>
             </div>
