fixed all the thinks and added projects and main index page

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
                         <a href="../photography/index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="../projects/index.html">Projects</a>
+                        <a href="../index.html#projects">Projects</a>
                     </li>
 					<li>
                         <a href="./index.html">About Me</a>
@@ -78,13 +78,13 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive" src="images/me.jpeg" alt="">
             </div>
             <div class="col-md-6">
-                <h2>About Modern Business</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                <h2>Kevin McKenzie</h2>
+                <p>I am a technology consultant for Deloitte Consulting.  I received a Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
+                <p><a href="docs/kmckenzie_resume.pdf">Resume</a></p>
+				<p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
             </div>
         </div>
         <!-- /.row -->
