--- a/photography/index.html
+++ b/photography/index.html
@@ -51,7 +51,7 @@
                         <a href="index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="../projects/index.html">Projects</a>
+                        <a href="../index.html#projects">Projects</a>
                     </li>
 					<li>
                         <a href="../about/index.html">About Me</a>
