--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="photography/index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="projects/index.html">Projects</a>
+                        <a href="#projects">Projects</a>
                     </li>
 					<li>
                         <a href="about/index.html">About Me</a>
@@ -63,20 +63,7 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
-                <div class="carousel-caption">
-                    <h2>Caption 1</h2>
-                </div>
-            </div>
-        </div>
-    </header>
 
     <!-- Page Content -->
     <div class="container">
@@ -85,16 +72,64 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Modern Business
+                    Kevin McKenzie
                 </h1>
             </div>
+		</div>
+		
+        <!-- Portfolio Section -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Photography</h2>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="photography/west-coast-trail/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/20120811-IMG_4020.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">West Coast Trail</div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="photography/yosemite/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_8467.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Yosemite</div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="photography/grand-canyon/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_5907.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Grand Canyon</div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="photography/wind-rivers/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_0810.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Wind Rivers</div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="photography/ancient-bristlecone-pine/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_9048.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Ancient Bristlecone Pine Forest</div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                </a>
+            </div>
+        </div>
+		
+        <div class="row" id="projects">
+            <div class="col-lg-12">
+                <h2 class="page-header">Projects</h2>
+            </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.3.7</h4>
+                        <h4>Learn to Code Puzzle</h4>
                     </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                    <div class="panel-body" style="height:115px;">
+                        <p>Under development</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -102,103 +137,46 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
+                        <h4>Mosh Network Simulator</h4>
                     </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                    <div class="panel-body" style="height:115px;">
+                        <p>Validate the response-time measurements of the <a href="https://mosh.org/">MOSH</a> terminal developed by Keith Winstein at MIT.</p>
+                        <a href="https://github.com/kjtmckenzie/mosh_test" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
+                        <h4>Fault Injector</h4>
                     </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                    <div class="panel-body" style="height:115px;">
+                        <p>Inject standard OS faults into Linux programs to test error handling routines.</p>
+                        <a href="https://github.com/kjtmckenzie/cs240-lab3" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-        </div>
+
         <!-- /.row -->
 
         <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
+                <h2 class="page-header">About Me</h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
-                    </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+                <img class="img-responsive" src="about/images/me.jpeg" alt="">
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <p>I am a technology consultant for Deloitte Consulting.  I received a Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
+                <p><a href="about/docs/kmckenzie_resume.pdf">Resume</a></p>
+				<p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
             </div>
         </div>
         <!-- /.row -->
-
-        <hr>
-
-        <!-- Call to Action Section -->
-        <div class="well">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
-                </div>
-            </div>
-        </div>
 
         <hr>
 
@@ -206,7 +184,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Kevin McKenzie 2017</p>
                 </div>
             </div>
         </footer>
