--- a/photography/index_template.html
+++ b/photography/index_template.html
@@ -51,10 +51,10 @@
                         <a href="../index.html">Photography</a>
                     </li>
                     <li>
-                        <a href="../../projects/index.html">Projects</a>
+                        <a href="../../index.html#projects">Projects</a>
                     </li>
 					<li>
-                        <a href="../../about.html">About Me</a>
+                        <a href="../../about/index.html">About Me</a>
                     </li>
                 </ul>
             </div>
