completed v1 of the site

--- a/index.html
+++ b/index.html
@@ -82,40 +82,41 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Photography</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6" style="height:300px;">
                 <a href="photography/west-coast-trail/index.html">
                     <img class="img-responsive img-hover" src="photography/images/covers/20120811-IMG_4020.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">West Coast Trail</div>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6" style="height:300px;">
+                <a href="photography/zion/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_9816.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Zion</div>
+            </div>
+            <div class="col-md-4 col-sm-6" style="height:300px;">
                 <a href="photography/yosemite/index.html">
                     <img class="img-responsive img-hover" src="photography/images/covers/IMG_8467.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Yosemite</div>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6" style="height:300px;">
                 <a href="photography/grand-canyon/index.html">
                     <img class="img-responsive img-hover" src="photography/images/covers/IMG_5907.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Grand Canyon</div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="photography/wind-rivers/index.html">
-                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_0810.jpg" alt="">
-                </a>
-				<div class="text-center small-gray">Wind Rivers</div>
-            </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-sm-6" style="height:300px;">
                 <a href="photography/ancient-bristlecone-pine/index.html">
                     <img class="img-responsive img-hover" src="photography/images/covers/IMG_9048.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Ancient Bristlecone Pine Forest</div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+            <div class="col-md-4 col-sm-6" style="height:300px;">
+                <a href="photography/wind-rivers/index.html">
+                    <img class="img-responsive img-hover" src="photography/images/covers/IMG_0810.jpg" alt="">
                 </a>
+				<div class="text-center small-gray">Wind Rivers</div>
             </div>
         </div>
 		
