--- a/photography/index.html
+++ b/photography/index.html
@@ -84,27 +84,28 @@
 				<div class="text-center small-gray">West Coast Trail</div>
             </div>
             <div class="col-md-4 img-portfolio">
+                <a href="zion/index.html">
+                    <img class="img-responsive img-hover" src="images/covers/IMG_9816.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Zion</div>
+            </div>
+            <div class="col-md-4 img-portfolio">
                 <a href="yosemite/index.html">
                     <img class="img-responsive img-hover" src="images/covers/IMG_8467.jpg" alt="">
                 </a>
 				<div class="text-center small-gray">Yosemite</div>
             </div>
-            <div class="col-md-4 img-portfolio">
-                <a href="grand-canyon/index.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_5907.jpg" alt="">
-                </a>
-				<div class="text-center small-gray">Grand Canyon</div>
-            </div>
+
         </div>
         <!-- /.row -->
 
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 img-portfolio">
-                <a href="wind-rivers/index.html">
-                    <img class="img-responsive img-hover" src="images/covers/IMG_0810.jpg" alt="">
+                <a href="grand-canyon/index.html">
+                    <img class="img-responsive img-hover" src="images/covers/IMG_5907.jpg" alt="">
                 </a>
-				<div class="text-center small-gray">Wind Rivers</div>
+				<div class="text-center small-gray">Grand Canyon</div>
             </div>
             <div class="col-md-4 img-portfolio">
                 <a href="ancient-bristlecone-pine/index.html">
@@ -112,6 +113,13 @@
                 </a>
 				<div class="text-center small-gray">Ancient Bristlecone Pine Forest</div>
             </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="wind-rivers/index.html">
+                    <img class="img-responsive img-hover" src="images/covers/IMG_0810.jpg" alt="">
+                </a>
+				<div class="text-center small-gray">Wind Rivers</div>
+            </div>
+
         </div>
 
 
