--- a/photography/zion/index.html
+++ b/photography/zion/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yosemite</title>
+    <title>Zion</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
@@ -69,23 +69,34 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Yosemite
-                    <small>Yosemite National Park, CA</small>
+                <h1 class="page-header">Zion
+                    <small>Zion National Park, UT</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="../../index.html">Home</a>
                     </li>
                     <li><a href="../index.html">Photography</a></li>
-					<li class="active">Yosemite</li>
+					<li class="active">Zion</li>
                 </ol>
             </div>
         </div>
         <!-- /.row -->
-
+		
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_8467.jpg">
-                    <img class="img-responsive" src="images/IMG_8467.jpg" alt="">
+                <a href="images/IMG_9816.jpg">
+                    <img class="img-responsive" src="images/IMG_9816.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9725.jpg">
+                    <img class="img-responsive" src="images/IMG_9725.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -94,8 +105,8 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_8511.jpg">
-                    <img class="img-responsive" src="images/IMG_8511.jpg" alt="">
+                <a href="images/IMG_9726.jpg">
+                    <img class="img-responsive" src="images/IMG_9726.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -104,8 +115,100 @@
 
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_8551.jpg">
-                    <img class="img-responsive" src="images/IMG_8551.jpg" alt="">
+                <a href="images/IMG_9767.jpg">
+                    <img class="img-responsive" src="images/IMG_9767.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9784.jpg">
+                    <img class="img-responsive" src="images/IMG_9784.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9793.jpg">
+                    <img class="img-responsive" src="images/IMG_9793.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9821.jpg">
+                    <img class="img-responsive" src="images/IMG_9821.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9867.jpg">
+                    <img class="img-responsive" src="images/IMG_9867.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9906.jpg">
+                    <img class="img-responsive" src="images/IMG_9906.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9920.jpg">
+                    <img class="img-responsive" src="images/IMG_9920.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9951.jpg">
+                    <img class="img-responsive" src="images/IMG_9951.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9979.jpg">
+                    <img class="img-responsive" src="images/IMG_9979.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <div class="row">
+            <div class="col-md-12">
+                <a href="images/IMG_9988.jpg">
+                    <img class="img-responsive" src="images/IMG_9988.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -114,38 +217,8 @@
 		
         <div class="row">
             <div class="col-md-12">
-                <a href="images/IMG_0346.jpg">
-                    <img class="img-responsive" src="images/IMG_0346.jpg" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-        <hr>
-
-        <div class="row">
-            <div class="col-md-12">
-                <a href="images/IMG_0616.jpg">
-                    <img class="img-responsive" src="images/IMG_0616.jpg" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-        <hr>
-
-        <div class="row">
-            <div class="col-md-12">
-                <a href="images/IMG_0622.jpg">
-                    <img class="img-responsive" src="images/IMG_0622.jpg" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-        <hr>
-
-        <div class="row">
-            <div class="col-md-12">
-                <a href="images/IMG_0657.jpg">
-                    <img class="img-responsive" src="images/IMG_0657.jpg" alt="">
+                <a href="images/IMG_0028.jpg">
+                    <img class="img-responsive" src="images/IMG_0028.jpg" alt="">
                 </a>
             </div>
         </div>
